LAYOUT: Fixed the fontsize. It was too thin on smaller screen. I also harmonized everything with a new font for some of the titles.

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -13,7 +13,7 @@ $menu-orange: #df9a33;
 // Imports
 
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,200);
+@import url(http://fonts.googleapis.com/css?family=Arvo:400,700);
 
 /////////
 // Mixins
@@ -23,8 +23,8 @@ $menu-orange: #df9a33;
 	font-family: 'Lato', sans-serif;
 	font-weight: $weight;
 }
-@mixin raleway($weight) {
-	font-family: 'Raleway', sans-serif;
+@mixin arvo($weight) {
+	font-family: 'Arvo', serif;
 	font-weight: $weight;
 }
 
@@ -43,7 +43,7 @@ $menu-orange: #df9a33;
 	margin-bottom: 30px;
 	background-color: $color;
 	h2{
-		@include lato(100);
+		@include lato(300);
 		color: $menu;
 	}
 }
@@ -53,7 +53,7 @@ $menu-orange: #df9a33;
 	padding: 50px 0;
 	text-align: center;
 	h2 {
-		@include lato(100);
+		@include lato(300);
 		padding-top: 25px;
 	}
 	a,p {@include lato(300);}
@@ -101,13 +101,13 @@ a {
 	}
 
 	.home-link h2 {
-		@include lato(100);
-		color: $home-link;
+		@include lato(300);
+		color: $menu;
 		padding-top: 20px; padding-bottom: 10px;
 	}
 
 	menu a h5 {
-		@include lato(100);
+		@include lato(300);
 		@include fadein(background);
 		float: right;
 		padding: 10px 15px;
@@ -195,7 +195,7 @@ a {
 .blog-post {
 	padding-top: 30px;
 	.title {
-		@include lato(100);
+		@include arvo(400);
 		text-align: center;
 		color: $menu-blue;
 	}
@@ -205,7 +205,7 @@ a {
 		span {
 			color: $menu-blue;
 			text-align: center;
-			@include raleway(200);
+			@include lato(300);
 			i {
 				padding-right: 10px;
 			}
@@ -213,7 +213,7 @@ a {
 	}
 
 	h3 {
-		@include raleway(200);
+		@include arvo(400);
 		text-align: left;
 		margin-top: 20px;
 
@@ -293,6 +293,14 @@ input[type="submit"] {
 }
 
 .container-contact {@include container-title(darken($menu-green,5%));}
-.container-contact-mail  {margin-top: 75px; text-align: center; @include lato(100);}
-.container-contact-social {margin-top: 100px; text-align: center;}
+.container-contact-mail  {
+    margin-top: 75px; 
+    text-align: center;
+    h3 {@include arvo(400);}
+}
+.container-contact-social {
+    margin-top: 100px; 
+    text-align: center; 
+    h3 {@include arvo(400);}
+}
 
